# metricx

./: README.md  input.jsonl  output.jsonl  pyproject.toml  requirements.txt
metricx/: __init__.py
metricx/metricx24/: predict.py
metricx24/: predict.py
